<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_padding"
            android:layout_marginTop="@dimen/margin_medium"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/large_padding">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/extra_large_padding"
                    android:background="@drawable/button_style"
                    android:text="Login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_s"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_marginRight="@dimen/medium_padding"
                    android:background="@drawable/edit_ext_background"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="@dimen/medium_padding"
                    android:hint="PASSWORD"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/large_padding"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/font_s"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />


                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:layout_marginTop="@dimen/extra_large_padding"
                    android:layout_marginRight="@dimen/medium_padding"
                    android:background="@drawable/edit_ext_background"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="@dimen/medium_padding"
                    android:hint="EMAIL"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/large_padding"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/font_s"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />


                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:src="@drawable/ic_book_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />


                <TextView
                    android:id="@+id/tv_dehaat_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_padding"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/app_new_name"
                    android:textColor="@color/text_black_heading"
                    android:textSize="@dimen/font_l"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo" />


                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_padding"
                    android:fontFamily="sans-serif-light"
                    android:text="Sign In"
                    android:textColor="@color/text_black_heading"
                    android:textSize="@dimen/font_l"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dehaat_author" />




                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_padding"
                    android:fontFamily="sans-serif-light"
                    android:text="Welcome"
                    android:textColor="@color/text_black_heading"
                    android:textSize="@dimen/font_xl"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>